# CarPhyModel

./: .gitignore  CMakeLists.txt  readme.md  todo.md
doc/: howtouse.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/config/: CarPhyModel.xml  Jammer_property.xml  car.xml  car.xsd  car_protection.xml  exampleCar.xml  exampleCarV2.xml  typedefine.xml
src/model/: carbuilder.cpp  carbuilder.h  cardamage.cpp  cardamage.h  carfireunit.h  carhull.cpp  carhull.h  carmodel.cpp  carmodel.h  carmodel.hpp  carprotection.h  carsensor.cpp  carsensor.h  environment.h  geoinfo.hpp
src/model/ammunition/: AP.cpp  AP.h  HE.cpp  HE.h  HEAT.h  HEAT.hpp  ammunition.hpp  ammunitionfactory.hpp  collision.hpp
src/model/ammunitions/: AP.cpp  AP.h  HE.cpp  HE.h  HEAT.h  ammunition.hpp  ammunitionfactory.hpp
src/model/communication/: communication.hpp  communicationfactory.hpp
src/model/communication/antenna/: myantenna.cpp  myantenna.h  myantenna.hpp
src/model/communication/comm/: comm.cc  comm.h  comm_export.h  common_struct.h
src/model/communication/ns2model/: ns2.hpp
src/model/communication/sample/: samplecommunication.hpp
src/model/damage/: cardamage.cpp  cardamage.h
src/model/environment/: envservice.hpp  wsf.hpp
src/model/firecontrolsystem/: carfcs.h  carfcs.hpp  fcs.h
src/model/framework/: component.hpp  componentmanager.hpp  duplicate_entitysynthesizer.hpp  entitysynthesizer.hpp  pattern.hpp  system.hpp
src/model/hull/: carhull.cpp  carhull.h  wheel.cpp  wheel.h
src/model/hull/track/: track.hpp
src/model/hull/wheel/: wheel.cpp  wheel.h
src/model/protection/: carprotection.cpp  carprotection.h
src/model/routeplan/: AStar.h  Astar.cpp
src/model/sensors/: carsensor.cpp  carsensor.h  sensor.hpp  sensorfactory.hpp
src/model/sensors/photoelectric/: photoelectric.hpp
src/model/sensors/radar/: Antenna.cpp  Antenna.h  Clutter.cpp  Clutter.h  CoordTransform.cpp  CoordTransform.hpp  Jammer.cpp  Jammer.h  Radar.cpp  Radar.h  RadarReceiver.cpp  RadarReceiver.h  RadarTransmitter.cpp  RadarTransmitter.h  dataType.hpp  myradar.cpp  myradar.h  radar66.cc  radar66.h  tinystr.cpp
src/model/tools/: collision.hpp  constant.hpp  coordinate.hpp  datastructure.hpp  initjob.hpp  interpolation.hpp  metatools.hpp  myassert.hpp  myrandom.hpp  rand.hpp  seterror.hpp  vector3.hpp
src/model/toolsystem/: actionsystem.hpp  ballisticsystem.hpp  commandsystem.hpp  hitsystem.hpp  iosystem.hpp
src/model/weapon/: carfireunit.cpp  carfireunit.h  carfireunit.hpp  guns.hpp
src/platform/cq/: CMakeLists.txt
src/platform/cq/CarPhyModel/: CMakeLists.txt  CarPhyModel.cpp  CarPhyModel.h  CarPhyModel_export.h  common_struct.h
src/platform/cq/config/: CarPhyModel.xml  typedefine.xml
src/platform/cq/csconfig/: model_info.cc  model_info.h  type_define_info.cc  type_define_info.h
src/platform/cq/csmodel_base/: csmodel_base.h  model_struct.h
src/platform/cq/model_test/: CMakeLists.txt  main.cc  printutil.h
test/: CMakeLists.txt  basetest.h  test01.hpp  test02.hpp  test03.hpp  test04.hpp  test05.hpp  test06.hpp  test07.hpp  test08.hpp  test09.hpp  test10.hpp  test11.hpp  test12.hpp  test13.hpp  test14.hpp  testmain.cpp  testreadtif.hpp
test/abilitytest/: CMakeLists.txt  commtest.cpp  firetest.cpp  hulltest.cpp  jammertest.cpp  prodamtest.cpp  radartest.cpp
test/data/: routedata.txt
