file(GLOB CURRENT_PROJ_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
set(TEST_SRC ${CURRENT_PROJ_SRC})
add_subdirectory(abilitytest)
# message(STATUS "test" ${TEST_SRC})
add_executable(Test ${MODEL_SRC} ${TEST_SRC})

#target_include_directories(${PROJ_NAME} PUBLIC D:/GDAL/GLADLibrary/include)
find_package(GDAL CONFIG REQUIRED)
target_link_libraries(Test PRIVATE GDAL::GDAL)

target_include_directories(${PROJ_NAME} PUBLIC D:/LML/include/libmiddleware.h)
target_link_libraries(Test PRIVATE D:/LML/lib/libmiddleware.lib)
#target_link_libraries(Test PRIVATE D:/GDAL/GLADLibrary/lib/gdal_i.lib)
# if(MSVC)
#   SET_TARGET_PROPERTIES(Test PROPERTIES LINK_FLAGS "/PROFILE")
# endif()