add_executable(hulltest hulltest.cpp ${MODEL_SRC})
add_executable(prodamtest prodamtest.cpp ${MODEL_SRC})
add_executable(radartest radartest.cpp ${MODEL_SRC})
add_executable(commtest commtest.cpp ${MODEL_SRC})
add_executable(firetest firetest.cpp ${MODEL_SRC})
add_executable(jammertest jammertest.cpp ${MODEL_SRC})